--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -27,51 +28,43 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=web/lib/activation.jar
 file.reference.hamcrest-core-1.3-javadoc.jar=web/lib/hamcrest-core-1.3-javadoc.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=web/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=web/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=web/lib/javax.mail.jar
 file.reference.jaxb-api-2.1.jar=web/lib/jaxb-api-2.1.jar
-file.reference.json-20240303.jar=D:\\NetBeans17\\json-20240303.jar
 file.reference.junit-4.12.jar=web/lib/junit-4.12.jar
 file.reference.junit-4.13.2-javadoc.jar=web/lib/junit-4.13.2-javadoc.jar
 file.reference.lombok-1.18.24_1.jar=web/lib/lombok-1.18.24_1.jar
 file.reference.mockito-core-4.11.0-javadoc.jar=web\\lib\\mockito-core-4.11.0-javadoc.jar
 file.reference.mockito-core-5.14.2-javadoc.jar=web/lib/mockito-core-5.14.2-javadoc.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=web/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=web/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=web/lib/javax.mail.jar
-file.reference.jaxb-api-2.1.jar=web/lib/jaxb-api-2.1.jar
-file.reference.lib-owlcarousel=web/lib/owlcarousel
-file.reference.lombok-1.18.24.jar=web/lib/lombok-1.18.24.jar
 file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
+file.reference.org.jacoco.ant-0.8.12.jar=web/lib/org.jacoco.ant-0.8.12.jar
+file.reference.selenium-server-4.26.0.jar=web\\lib\\selenium-server-4.26.0.jar
 file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakarta.servlet.jsp.jstl-2.0.0.jar:${j2ee.server.home}/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.8-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jaxb-api-2.1.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/lombok-1.18.24.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/sqljdbc42.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.junit-4.13.2-javadoc.jar}:\
     ${file.reference.mockito-core-5.14.2-javadoc.jar}:\
-    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.lib-owlcarousel}:\
+    ${file.reference.org.jacoco.ant-0.8.12.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.sqljdbc42.jar}:\
@@ -80,19 +73,7 @@ javac.classpath=\
     ${file.reference.selenium-server-4.26.0.jar}:\
     ${file.reference.selenium-server-4.26.0.jar}:\
     ${file.reference.lombok-1.18.24_1.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.lombok-1.18.24_1.jar}
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.json-20240303.jar}
     ${file.reference.javax.mail.jar}
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.javax.activation-1.2.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.json-20240303.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
-    ${file.reference.lombok-1.18.24.jar}:\
-
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -104,7 +85,15 @@ javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.org.jacoco.ant-0.8.12.jar}:\
+    ${file.reference.mockito-core-4.11.0-javadoc.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -125,7 +114,9 @@ platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
