--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
